separate installment schedule from payment records
- Add ExpenseInstallmentPayment for partial payment history

- Replace Long with BigDecimal for all money fields

- Fix addExpense to save full schedule (was saving only 1 installment)

- Fix payment modal to target specific installment by ID

- Backend validates schedule total independently of frontend

- Consolidate response building into single method

- Fix paymentType derived incorrectly from paid amount

- Frontend uses paise for float-safe schedule validation